[gd_scene load_steps=47 format=3 uid="uid://cfs13kmvwo48q"]

[ext_resource type="Texture2D" uid="uid://cm7vv1e8rlqqg" path="res://res/asset/timer_anim.png" id="1_1ipjh"]
[ext_resource type="Script" path="res://res/script/misc/timer.gd" id="1_elqde"]
[ext_resource type="Texture2D" uid="uid://bb0bqj4sasi3g" path="res://res/asset/font_angka.png" id="2_hr2ms"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ipjh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hr2ms"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hr2ms"]
atlas = ExtResource("1_1ipjh")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_elqde"]

[sub_resource type="Animation" id="Animation_elqde"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel/timer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/HBoxContainer/Panel/timer:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_t1nv5"]
resource_name = "timer"
length = 8.85
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel/timer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8, 1.95, 2.1, 2.25, 2.4, 2.55, 2.7, 2.85, 3, 3.15, 3.3, 3.45, 3.6, 3.75, 3.9, 4.05, 4.2, 4.35, 4.5, 4.65, 4.8, 4.95, 5.1, 5.25, 5.4, 5.55, 5.7, 5.85, 6, 6.15, 6.3, 6.45, 6.6, 6.75, 6.9, 7.05, 7.2, 7.35, 7.5, 7.65, 7.8, 8.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/HBoxContainer/Panel/timer:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 7.95, 8.25, 8.55, 8.85),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0.0, 0.785398, 0.0, 0.785398, 1.5708]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t1nv5"]
_data = {
"RESET": SubResource("Animation_elqde"),
"timer": SubResource("Animation_t1nv5")
}

[sub_resource type="Animation" id="Animation_g2gjl"]
resource_name = "0"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel2/num1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_o2lsk"]
resource_name = "1"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel2/num1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_chyjh"]
resource_name = "2"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel2/num1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_ov4s5"]
resource_name = "3"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel2/num1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_veln0"]
resource_name = "4"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel2/num1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_0kh3i"]
resource_name = "5"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel2/num1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_yhx8l"]
resource_name = "6"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel2/num1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_ba7xb"]
resource_name = "7"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel2/num1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_dgj2y"]
resource_name = "8"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel2/num1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_8sc3w"]
resource_name = "9"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel2/num1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_gx85h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel2/num1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_chyjh"]
_data = {
"0": SubResource("Animation_g2gjl"),
"1": SubResource("Animation_o2lsk"),
"2": SubResource("Animation_chyjh"),
"3": SubResource("Animation_ov4s5"),
"4": SubResource("Animation_veln0"),
"5": SubResource("Animation_0kh3i"),
"6": SubResource("Animation_yhx8l"),
"7": SubResource("Animation_ba7xb"),
"8": SubResource("Animation_dgj2y"),
"9": SubResource("Animation_8sc3w"),
"RESET": SubResource("Animation_gx85h")
}

[sub_resource type="Animation" id="Animation_uxli0"]
resource_name = "0"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel3/num2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_j6ee0"]
resource_name = "1"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel3/num2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_hq8mm"]
resource_name = "2"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel3/num2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_8pi7q"]
resource_name = "3"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel3/num2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_oj7oe"]
resource_name = "4"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel3/num2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_uvi46"]
resource_name = "5"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel3/num2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_xexir"]
resource_name = "6"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel3/num2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_uayxv"]
resource_name = "7"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel3/num2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_5k22y"]
resource_name = "8"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel3/num2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_4xtpi"]
resource_name = "9"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel3/num2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_2g7ia"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel3/num2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oj7oe"]
_data = {
"0": SubResource("Animation_uxli0"),
"1": SubResource("Animation_j6ee0"),
"2": SubResource("Animation_hq8mm"),
"3": SubResource("Animation_8pi7q"),
"4": SubResource("Animation_oj7oe"),
"5": SubResource("Animation_uvi46"),
"6": SubResource("Animation_xexir"),
"7": SubResource("Animation_uayxv"),
"8": SubResource("Animation_5k22y"),
"9": SubResource("Animation_4xtpi"),
"RESET": SubResource("Animation_2g7ia")
}

[sub_resource type="Animation" id="Animation_sfb6g"]
resource_name = "0"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel4/num3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_et3eo"]
resource_name = "1"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel4/num3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_mu8md"]
resource_name = "2"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel4/num3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_iv7f6"]
resource_name = "3"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel4/num3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_soi70"]
resource_name = "4"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel4/num3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_dd73c"]
resource_name = "5"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel4/num3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_gfytv"]
resource_name = "6"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel4/num3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_s7d6m"]
resource_name = "7"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel4/num3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_u78fv"]
resource_name = "8"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel4/num3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_ar2dp"]
resource_name = "9"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel4/num3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_my6ei"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/Panel4/num3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_my6ei"]
_data = {
"0": SubResource("Animation_sfb6g"),
"1": SubResource("Animation_et3eo"),
"2": SubResource("Animation_mu8md"),
"3": SubResource("Animation_iv7f6"),
"4": SubResource("Animation_soi70"),
"5": SubResource("Animation_dd73c"),
"6": SubResource("Animation_gfytv"),
"7": SubResource("Animation_s7d6m"),
"8": SubResource("Animation_u78fv"),
"9": SubResource("Animation_ar2dp"),
"RESET": SubResource("Animation_my6ei")
}

[node name="timeDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_elqde")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.833
anchor_right = 1.0
anchor_bottom = 0.119
offset_left = 0.639893
offset_top = 64.0
offset_right = -64.0001
offset_bottom = 0.479996
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel6" type="Panel" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_1ipjh")

[node name="Panel" type="Panel" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_hr2ms")

[node name="timer" type="Sprite2D" parent="Panel/HBoxContainer/Panel"]
position = Vector2(16, 32.5)
scale = Vector2(0.6, 0.6)
texture = SubResource("AtlasTexture_hr2ms")
offset = Vector2(-2, 1)
hframes = 27
vframes = 2

[node name="Panel2" type="Panel" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_elqde")

[node name="num1" type="Sprite2D" parent="Panel/HBoxContainer/Panel2"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_hr2ms")
offset = Vector2(33, 40)
hframes = 10

[node name="Panel3" type="Panel" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_elqde")

[node name="num2" type="Sprite2D" parent="Panel/HBoxContainer/Panel3"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_hr2ms")
offset = Vector2(30, 40)
hframes = 10

[node name="Panel4" type="Panel" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_elqde")

[node name="num3" type="Sprite2D" parent="Panel/HBoxContainer/Panel4"]
position = Vector2(1, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_hr2ms")
offset = Vector2(25, 40)
hframes = 10

[node name="Panel5" type="Panel" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_1ipjh")

[node name="clockAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t1nv5")
}

[node name="num1" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_chyjh")
}

[node name="num2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oj7oe")
}

[node name="num3" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_my6ei")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
